# kicad-source-mirror

./: .gitignore  CMakeLists.txt
3d-viewer/: CMakeLists.txt
3d-viewer/3d_cache/sg/: CMakeLists.txt
bitmap2component/: CMakeLists.txt  bitmap2cmp_gui.cpp
bitmaps_png/: CMakeLists.txt
common/: CMakeLists.txt  bin_mod.cpp  common.cpp  config_params.cpp  footprint_info.cpp  hotkeys_basic.cpp  lset.cpp  pgm_base.cpp
common/view/: view_group.cpp
common/widgets/: mathplot.cpp
cvpcb/: CMakeLists.txt  cfg.cpp
eeschema/: CMakeLists.txt  class_library.cpp  eeschema.cpp  eeschema_config.cpp
gerbview/: CMakeLists.txt  gerbview_config.cpp
include/: bin_mod.h  common.h  config_params.h  kiface_i.h  layers_id_colors_and_visibility.h  pgm_base.h  profile.h  project.h  wxstruct.h
include/view/: view_group.h
kicad/: CMakeLists.txt  pgm_kicad.h
lib_dxf/: CMakeLists.txt
pagelayout_editor/: CMakeLists.txt  pl_editor_config.cpp
pcb_calculator/: CMakeLists.txt  pcb_calculator_frame.cpp
pcbnew/: CMakeLists.txt  class_board_design_settings.cpp  class_pad.cpp  modeditoptions.cpp  pcb_plot_params.cpp  pcbnew_config.cpp  ratsnest_data.cpp
pcbnew/github/: CMakeLists.txt
pcbnew/pcad2kicadpcb_plugin/: CMakeLists.txt
pcbnew/router/: CMakeLists.txt  length_tuner_tool.cpp  pns_diff_pair.cpp  pns_diff_pair.h  pns_diff_pair_placer.cpp  pns_diff_pair_placer.h  pns_dp_meander_placer.cpp  pns_dp_meander_placer.h  pns_dragger.cpp  pns_dragger.h  pns_index.cpp  pns_index.h  pns_item.h  pns_kicad_iface.cpp  pns_kicad_iface.h  pns_line.cpp  pns_line_placer.cpp  pns_line_placer.h  pns_meander.cpp  pns_meander.h  pns_meander_placer.cpp  pns_meander_placer.h  pns_meander_placer_base.cpp  pns_meander_skew_placer.cpp  pns_node.cpp  pns_node.h  pns_optimizer.cpp  pns_placement_algo.h  pns_revision.cpp  pns_revision.h  pns_router.cpp  pns_router.h  pns_shove.cpp  pns_shove.h  pns_sizes_settings.cpp  pns_sizes_settings.h  pns_tool_base.cpp  pns_topology.cpp  pns_walkaround.cpp  router_tool.cpp
plugins/3d/idf/: CMakeLists.txt
plugins/3d/oce/: CMakeLists.txt
plugins/3d/vrml/: CMakeLists.txt
polygon/: CMakeLists.txt
potrace/: CMakeLists.txt
tools/: CMakeLists.txt
utils/idftools/: CMakeLists.txt
